--- a/package.json
+++ b/package.json
@@ -46,13 +46,14 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "next": "^14.2.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.61.1",
     "react-resizable-panels": "^2.1.9",
-    "next": "^14.2.0",
+    "react-router-dom": "^7.9.5",
     "recharts": "^2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
